clang/test/BSC/Negative/Ownership/Borrow/borrow_cast_mut_to_const/borrow_cast_mut_to_const.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

// Test that casting between mutable and const borrows is forbidden in both directions
// This prevents aliasing and const-safety violations

void test_basic_cast_mut_to_const() {
  int local = 10;
  int *_Borrow p = &_Mut local;

  // ERROR: Cannot cast mutable _Borrow to const _Borrow
  const int *_Borrow b = (const int *_Borrow)p;  // expected-error {{incompatible borrow types, cannot cast 'int *_Borrow' to 'const int *_Borrow'}}

  *p = 1;
}

void test_basic_cast_const_to_mut() {
  int local = 10;
  const int *_Borrow c = &_Const local;

  // ERROR: Cannot cast const _Borrow to mutable _Borrow
  int *_Borrow m = (int *_Borrow)c;  // expected-error {{incompatible borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}

  *m = 20;  // Would violate const safety if allowed
}

void test_explicit_cast_mut_to_const() {
  int x = 42;
  int *_Borrow mut_ptr = &_Mut x;

  // ERROR: Explicit cast from mut to const should fail
  const int *_Borrow const_ptr = (const int *_Borrow)mut_ptr;  // expected-error {{incompatible borrow types, cannot cast 'int *_Borrow' to 'const int *_Borrow'}}
}

void test_explicit_cast_const_to_mut() {
  int y = 100;
  const int *_Borrow const_ptr = &_Const y;

  // ERROR: Explicit cast from const to mut should fail
  int *_Borrow mut_ptr = (int *_Borrow)const_ptr;  // expected-error {{incompatible borrow types, cannot cast 'const int *_Borrow' to 'int *_Borrow'}}
}

void test_nested_pointer_cast_mut_to_const() {
  int value = 100;
  int *val_ptr = &value;
  int **_Borrow pp = &_Mut val_ptr;

  // ERROR: Cannot cast mutable _Borrow of pointer-to-pointer to const _Borrow
  const int **_Borrow cpp = (const int **_Borrow)pp;  // expected-error {{incompatible borrow types, cannot cast 'int **_Borrow' to 'const int **_Borrow'}}
}

void test_nested_pointer_cast_const_to_mut() {
  int value = 200;
  const int *val_ptr = &value;
  const int **_Borrow cpp = &_Const val_ptr;

  // ERROR: Cannot cast const _Borrow of pointer-to-pointer to mutable _Borrow
  int **_Borrow pp = (int **_Borrow)cpp;  // expected-error {{incompatible borrow types, cannot cast 'const int **_Borrow' to 'int **_Borrow'}}
}

void test_struct_pointer_cast_mut_to_const() {
  struct Point {
    int x;
    int y;
  };

  struct Point p = {1, 2};
  struct Point *_Borrow mut_p = &_Mut p;

  // ERROR: Cannot cast mutable _Borrow of struct to const _Borrow
  const struct Point *_Borrow const_p = (const struct Point *_Borrow)mut_p;  // expected-error {{incompatible borrow types, cannot cast 'struct Point *_Borrow' to 'const struct Point *_Borrow'}}
}

void test_struct_pointer_cast_const_to_mut() {
  struct Point {
    int x;
    int y;
  };

  struct Point p = {3, 4};
  const struct Point *_Borrow const_p = &_Const p;

  // ERROR: Cannot cast const _Borrow of struct to mutable _Borrow
  struct Point *_Borrow mut_p = (struct Point *_Borrow)const_p;  // expected-error {{incompatible borrow types, cannot cast 'const struct Point *_Borrow' to 'struct Point *_Borrow'}}
}

void test_allowed_casts() {
  int a = 5;

  // OK: const to const
  const int *_Borrow c1 = &_Const a;
  const int *_Borrow c2 = (const int *_Borrow)c1;  // legal

  // OK: mut to mut
  int *_Borrow m1 = &_Mut a;
  int *_Borrow m2 = (int *_Borrow)m1;  // legal
}

int main() {
  test_basic_cast_mut_to_const();
  test_basic_cast_const_to_mut();
  test_explicit_cast_mut_to_const();
  test_explicit_cast_const_to_mut();
  test_nested_pointer_cast_mut_to_const();
  test_nested_pointer_cast_const_to_mut();
  test_struct_pointer_cast_mut_to_const();
  test_struct_pointer_cast_const_to_mut();
  test_allowed_casts();
  return 0;
}
